<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veritabani</string>
    <string name="action_settings">Settings</string>
    <string name="ad">Ad: </string>
    <string name="soyad">Soyad: </string>
    <string name="kaydet">KAYDET</string>
    <string name="bilgigetir">BİLGİ GETİR</string>
    <string name="girilenad">Girilen Ad: </string>
    <string name="girilensoyad">Girilen Soyad: </string>

</resources>
